lo que queria ismael en el perfil

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -38,10 +38,11 @@
         </div>
         <div class="datos">
             <ul>
-                <li id="nameUser">NOMBRE COMPLETO</li>
-                <li id ="dateUser">FECHA NACIMIENTO</li>
-                <li id="telUser">NUMERO TLF</li>
-                <li id="emailUser">CORREO</li>
+                <li id="nameUser"></li>
+                <li id ="dateUser"></li>
+                <li id="telUser"></li>
+                <li id="emailUser"></li>
+                <li id="locUser"></li>
             </ul>
         </div>
         <div class="redes">
@@ -52,6 +53,9 @@
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
         </div>
+    </div>
+    <div class="descPerfil">
+        <p id="descUser">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eius officiis nemo suscipit eos, facere aliquid architecto perferendis eaque distinctio doloribus illum, delectus quas unde, mollitia esse dolorum at enim!</p>
     </div>
     <div class="triangulo"></div>
     <div id="timeline"></div>
