añadido overflow auto a el content

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,7 +28,14 @@
         <div class="description">
             <h2>Bienvenido a YourPath!!!</h2>
             <h3>Empieza hoy mismo a planear tu futuro al exito.</h3>
-            <p>YourPath es una plataforma para que puedas diseñar el camino hacia tus metas. Podrás crear tu propio camino con el editor, usando como referencia el Path ya recorrido por otras personas que han logrado sus metas. Empieza hoy mismo tu camino hacia tus sueños.</p>
+            <ul>
+                <li>YourPath es una plataforma para que puedas diseñar el camino hacia tus metas laborales.</li>
+                <li>Regístrate hoy mismo y podrás conocer el Path de diferentes perfiles profesionales: las formaciónes que han realizado, los puestos que han tenido antes, sus puntos fuertes...</li>
+                <li>Podrás crear tu propio Path con el editor, usando como referencia los Path ya recorridos por otras personas que han logrado sus metas.</li>
+                <li>Según vayas recorriendo tu Path podrás ir viendo como consigues tus metas y el tiempo que le has dedicado. Según vayas pasando por los diferentes puntos irá evolucionando tu Path, hasta un punto en el que servirá de referencia para otras personas con tus mismas aspiraciones.</li>
+                <li>Crea tu Path todo lo largo que seas capaz de soñar con tu background, tus actuales ocupaciones y tus futuros objetivos, el límite lo pones tú.</li>
+            </ul>              
+            <h3>Empieza hoy mismo tu Path hacia tus sueños.</h3>
         </div>
     </div>
     <div class="info">
