añadiendo style a las barras laterales

--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -48,7 +48,7 @@
                 <p><label for="end_date">¿Cuándo finaliza esta parada?</label></p>
                 <input type="month" id="end_date" name="end_date">
                 <p><label for="point-description">¿Qué te ha aportado esta parada?</label></p>
-                <textarea id="point-description" name="description" rows="5" placeholder="Ej. Aprendí a hacer un Hola Mundo muy feo..." required maxlength="1000"></textarea>
+                <textarea id="point-description" name="description" rows="5" placeholder="Ej. Aprendí a hacer un Hola Mundo en Java..." required maxlength="1000"></textarea>
                 <p>Elige el estado: </p>
                 <input type="radio" id="state_done" name="state" value="DONE" required>
                 <label for="state_done">Terminado </label>
